test/parser/anonymous_function/missing_body_error.myte
module Test

val x = fn () 1